- Statusbar shows CPU type & speed
- Can create blank 2.88MB (ED) and 1.44MB (HD) floppy images
  from the GUI in addition to DD & SD images
- Debugger improvements:
  - GEMDOS tracing gives slightly more information
  - "stateload" and "statesave" commands for memory snapshots
  - "trace" command for tracing what the emulated code does
  - "evaluate" command for doing calculations
  - "info" command for showing Atari HW and OS information
  - "symbols" command for loading and listing CPU & DSP code
    symbols/addresses and breaking on them.  Symbols are shown
    on CPU disassembly
  - debugger command and command argument TAB-completion support
    (requires readline library)
  - improved register name handling + fixed DSP reg name matching
  - if conditional breakpoint condition both sides are identical, replace
    right side with current value of given expression (e.g. if it's "d0",
    use current D0 value).  If the comparison is for inequality ("!"),
    output the value & break only when the value changes from the previous
    value (not original like with other comparisons)
  - option to trace/output conditional breakpoint hits without breaking
  - conditional breakpoints count hits and can be optionally removed
    after first hit
  - CPU breakpoints can be given an optional count of how many hits
    there needs to be before they break into debugger.  If count
    of one is given, breakpoint is removed after hit
  - Display DSP instructions cycle timings in disasm mode (in cycles)

Other changes:
- Preliminary CMake build support


 Version 1.3.1 (2009-09-05):
 ---------------------------

This is only a bug fix release:
- GEMDOS HD emulation works together with ACSI HD image again
- Fix incorrect use of DESTDIR in python-ui installation
- Fix memdump/disasm in python-ui


 Version 1.3.0 (2009-08-16):
 ---------------------------

Emulation:
- Hugely improved DSP emulation:
  - Many more DSP using games/demos/apps work now