@@ -10,6 +10,7 @@
 #ifndef HATARI_DEBUGINFO_H
 #define HATARI_DEBUGINFO_H
 
+extern void DebugInfo_ShowInfo(void);
 extern char *DebugInfo_MatchCommand(const char *text, int state);
 extern int DebugInfo_Command(int nArgc, char *psArgs[]);
 
